Update changes in css file

--- a/form.html
+++ b/form.html
@@ -21,17 +21,18 @@
       </ul>
     </nav>
     <section>
-      <h2><a href="./form.html">+</a></h2>
+      <h2><a href="./index.html">+</a></h2>
       <h2>2/3 Comprados</h2>
     </section>
 
   </header>
   <main>
     <form>
+
       <h2>Editar artículo</h2>
-      <input type="text" name="nombre">Nombre
-      <input type="text" name="precio">Precio
-      <input type="submit">Modificar
+      <label>Nombre<input type="text" name="nombre"></label>
+      <label>Precio<input type="text" name="precio"></label>
+      <input type="submit" value="Modificar">
 
     </form>
 
