--- a/index.html
+++ b/index.html
@@ -5,12 +5,49 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
-  <title>Document</title>
+  <link rel="shortcut icon" type="image/x-icon" href="./favicon.jpeg">
+  <link rel="stylesheet" href="style.css">
+  <title>Lista de la compra</title>
 </head>
 
 <body>
+  <header>
+    <nav>
+      <h1>Lista de la compra</h1>
+      <ul>
+        <li>Principal</li>
+        <li>Lista</li>
+        <li>Acerca de</li>
+      </ul>
+    </nav>
+    <section>
+      <h2><a href="./form.html">+</a></h2>
+      <h2>2/3 Comprados</h2>
+    </section>
 
+  </header>
+  <main>
+    <form>
+
+      <input type="checkbox" name="lista" value="Pan">
+      <label>Pan</label>
+      <span>0.75€ X</span>
+      <input type="checkbox" name="lista" value="Azúcar">
+      <label>Azúcar</label>
+      <span> X</span>
+      <input type="checkbox" name="lista" value="Leche">
+      <label>Leche</label>
+      <span>1.20€ X</span>
+
+      <span>1.95€</span>
+
+    </form>
+
+  </main>
+
+  <footer>
+
+  </footer>
 </body>
 
 </html>
