--- a/index.html
+++ b/index.html
@@ -27,22 +27,23 @@
 
   </header>
   <main>
-    <form>
+    <div>
+      <form>
 
-      <input type="checkbox" name="lista" value="Pan">
-      <label>Pan</label>
-      <span>0.75€ X</span>
-      <input type="checkbox" name="lista" value="Azúcar">
-      <label>Azúcar</label>
-      <span> X</span>
-      <input type="checkbox" name="lista" value="Leche">
-      <label>Leche</label>
-      <span>1.20€ X</span>
+        <input class="pan" type="checkbox" name="lista" value="Pan">
+        <label>Pan</label>
+        <span>0.75€ X</span>
+        <input type="checkbox" name="lista" value="Azúcar">
+        <label>Azúcar</label>
+        <span> X</span>
+        <input class="leche" type="checkbox" name="lista" value="Leche">
+        <label>Leche</label>
+        <span>1.20€ X</span>
 
-      <span>1.95€</span>
+        <span>1.95€</span>
 
-    </form>
-
+      </form>
+    </div>
   </main>
 
   <footer>
