Adding last changes

--- a/form.html
+++ b/form.html
@@ -28,7 +28,6 @@
   </header>
   <main>
     <form>
-
       <h2>Editar artículo</h2>
       <label>Nombre<input type="text" name="nombre"></label>
       <label>Precio<input type="text" name="precio"></label>
@@ -39,7 +38,7 @@
   </main>
 
   <footer>
-
+    <img src="./validator-css.gif">
   </footer>
 </body>
 
