--- a/index.html
+++ b/index.html
@@ -29,25 +29,30 @@
   <main>
     <div>
       <form>
+        <ul>
+          <div>
+            <li><label class="pan">Pan<input type="checkbox" name="lista" value="Pan"></label></li>
 
-        <input class="pan" type="checkbox" name="lista" value="Pan">
-        <label>Pan</label>
-        <span>0.75€ X</span>
-        <input type="checkbox" name="lista" value="Azúcar">
-        <label>Azúcar</label>
-        <span> X</span>
-        <input class="leche" type="checkbox" name="lista" value="Leche">
-        <label>Leche</label>
-        <span>1.20€ X</span>
+            <li><label>Azúcar<input type="checkbox" name="lista" value="Azúcar"></label></li>
 
-        <span>1.95€</span>
+            <li><label class="leche">Leche<input class="leche" type="checkbox" name="lista" value="Leche"></label></li>
+          </div>
 
+          <div class="price">
+            <span>0.75€ X</span>
+            <span>X</span>
+            <span>1.20€ X</span>
+            <span>1.95€</span>
+          </div>
+
+
+        </ul>
       </form>
     </div>
   </main>
 
   <footer>
-
+    <img src="./validator-css.gif">
   </footer>
 </body>
 
